package model

import (
	"time"

	myassemblyv1 "buf.build/gen/go/capybara/my-assemble/protocolbuffers/go/myassembly/v1"
)

type Weapon struct {
	Name                 string `gorm:"primaryKey"`
	Category             string
	Maker                string
	ENLoad               int64
	Price                int64
	Weight               int64
	Unit                 string
	PAInterference       int64
	Cooling              int64
	Recoil               int64
	TKHeatBuildup        int64
	DeploymentRange      int64
	AmmunitionCost       string
	MagazineRounds       int64
	IdealRange           int64
	AttackPower          string
	ATKHeatBuildup       int64
	DamageMitigation     int64
	ImpactDampening      int64
	IdleDamageMitigation int64
	IdleTime             float64
	IdleImpactMitigation int64
	ReloadTime           float64
	MaxLockCount         int64
	EffectiveRange       int64
	BlastRadius          int64
	DirectHitAdjustment  int64
	TotalRounds          int64
	Impact               string
	AccumulativeImpact   string
	Guidance             int64
	HomingLockTime       float64
	RapidFire            float64
	ConsecutiveHits      int64
	IGDuration           float64
	IGDamageMitigation   int64
	IGImpactDampening    int64
	ChgEnLoad            int64
	ChgTime              float64
	ChgAttackPower       string
	ChgHeatBuildup       int64
	ChgAmmoConsumption   int64
	ChgBlastRadius       int64
	ChgImpact            string
	ChgAccumImpact       string
	FullChgAttackPower   string
	FullChgHeatBuildup   int64
	FullChgAmmoConsump   int64
	FullChgBlastRadius   int64
	FullChgImpact        string
	FullChgAccumImpact   string
	FullChgTime          float64
	CreatedAt            time.Time
}

func (w *Weapon) ToPB() *myassemblyv1.Weapon {
	return &myassemblyv1.Weapon{
		Name:                 w.Name,
		Category:             w.Category,
		Maker:                w.Maker,
		EnLoad:               int32(w.ENLoad),
		Price:                int32(w.Price),
		Weight:               int32(w.Weight),
		Unit:                 w.Unit,
		PaInterference:       int32(w.PAInterference),
		Cooling:              int32(w.Cooling),
		Recoil:               int32(w.Recoil),
		TkHeatBuildup:        int32(w.TKHeatBuildup),
		DeploymentRange:      int32(w.DeploymentRange),
		AmmunitionCost:       w.AmmunitionCost,
		MagazineRounds:       int32(w.MagazineRounds),
		IdealRange:           int32(w.IdealRange),
		AttackPower:          w.AttackPower,
		AtkHeatBuildup:       int32(w.ATKHeatBuildup),
		DamageMitigation:     int32(w.DamageMitigation),
		ImpactDampening:      int32(w.ImpactDampening),
		IdleDamageMitigation: int32(w.IdleDamageMitigation),
		IdleTime:             float32(w.IdleTime),
		IdleImpactMitigation: int32(w.IdleImpactMitigation),
		ReloadTime:           float32(w.ReloadTime),
		MaxLockCount:         int32(w.MaxLockCount),
		EffectiveRange:       int32(w.EffectiveRange),
		BlastRadius:          int32(w.BlastRadius),
		DirectHitAdjustment:  int32(w.DirectHitAdjustment),
		TotalRounds:          int32(w.TotalRounds),
		Impact:               w.Impact,
		AccumulativeImpact:   w.AccumulativeImpact,
		Guidance:             int32(w.Guidance),
		HomingLockTime:       float32(w.HomingLockTime),
		RapidFire:            float32(w.RapidFire),
		ConsecutiveHits:      int32(w.ConsecutiveHits),
		IgDuration:           float32(w.IGDuration),
		IgDamageMitigation:   int32(w.IGDamageMitigation),
		IgImpactDampening:    int32(w.IGImpactDampening),
		ChgEnLoad:            int32(w.ChgEnLoad),
		ChgTime:              float32(w.ChgTime),
		ChgAttackPower:       w.ChgAttackPower,
		ChgHeatBuildup:       int32(w.ChgHeatBuildup),
		ChgAmmoConsumption:   int32(w.ChgAmmoConsumption),
		ChgBlastRadius:       int32(w.ChgBlastRadius),
		ChgImpact:            w.ChgImpact,
		ChgAccumImpact:       w.ChgAccumImpact,
		FullChgAttackPower:   w.FullChgAttackPower,
		FullChgHeatBuildup:   int32(w.FullChgHeatBuildup),
		FullChgAmmoConsump:   int32(w.FullChgAmmoConsump),
		FullChgBlastRadius:   int32(w.FullChgBlastRadius),
		FullChgImpact:        w.FullChgImpact,
		FullChgAccumImpact:   w.FullChgAccumImpact,
		FullChgTime:          float32(w.FullChgTime),
		CreatedAt:            w.CreatedAt.UnixMilli(),
	}
}

func (w *Weapon) FromPB(weapon *myassemblyv1.Weapon) *Weapon {
	return &Weapon{
		Name:                 weapon.Name,
		Category:             weapon.Category,
		Maker:                weapon.Maker,
		ENLoad:               int64(weapon.EnLoad),
		Price:                int64(weapon.Price),
		Weight:               int64(weapon.Weight),
		Unit:                 w.Unit,
		PAInterference:       int64(weapon.PaInterference),
		Cooling:              int64(weapon.Cooling),
		Recoil:               int64(weapon.Recoil),
		TKHeatBuildup:        int64(weapon.TkHeatBuildup),
		DeploymentRange:      int64(weapon.DeploymentRange),
		AmmunitionCost:       weapon.AmmunitionCost,
		MagazineRounds:       int64(weapon.MagazineRounds),
		IdealRange:           int64(weapon.IdealRange),
		AttackPower:          weapon.AttackPower,
		ATKHeatBuildup:       int64(weapon.AtkHeatBuildup),
		DamageMitigation:     int64(weapon.DamageMitigation),
		ImpactDampening:      int64(weapon.ImpactDampening),
		IdleDamageMitigation: int64(weapon.IdleDamageMitigation),
		IdleTime:             float64(weapon.IdleTime),
		IdleImpactMitigation: int64(weapon.IdleImpactMitigation),
		ReloadTime:           float64(weapon.ReloadTime),
		MaxLockCount:         int64(weapon.MaxLockCount),
		EffectiveRange:       int64(weapon.EffectiveRange),
		BlastRadius:          int64(weapon.BlastRadius),
		DirectHitAdjustment:  int64(weapon.DirectHitAdjustment),
		TotalRounds:          int64(weapon.TotalRounds),
		Impact:               weapon.Impact,
		AccumulativeImpact:   weapon.AccumulativeImpact,
		Guidance:             int64(weapon.Guidance),
		HomingLockTime:       float64(weapon.HomingLockTime),
		RapidFire:            float64(weapon.RapidFire),
		ConsecutiveHits:      int64(weapon.ConsecutiveHits),
		IGDuration:           float64(weapon.IgDuration),
		IGDamageMitigation:   int64(weapon.IgDamageMitigation),
		IGImpactDampening:    int64(weapon.IgImpactDampening),
		ChgEnLoad:            int64(weapon.ChgEnLoad),
		ChgTime:              float64(weapon.ChgTime),
		ChgAttackPower:       weapon.ChgAttackPower,
		ChgHeatBuildup:       int64(weapon.ChgHeatBuildup),
		ChgAmmoConsumption:   int64(weapon.ChgAmmoConsumption),
		ChgBlastRadius:       int64(weapon.ChgBlastRadius),
		ChgImpact:            weapon.ChgImpact,
		ChgAccumImpact:       weapon.ChgAccumImpact,
		FullChgAttackPower:   weapon.FullChgAttackPower,
		FullChgHeatBuildup:   int64(weapon.FullChgHeatBuildup),
		FullChgAmmoConsump:   int64(weapon.FullChgAmmoConsump),
		FullChgBlastRadius:   int64(weapon.FullChgBlastRadius),
		FullChgImpact:        weapon.FullChgImpact,
		FullChgAccumImpact:   weapon.FullChgAccumImpact,
		FullChgTime:          float64(weapon.FullChgTime),
		CreatedAt:            time.UnixMilli(weapon.CreatedAt),
	}
}
